--- a/styles/base/template/forums.html
+++ b/styles/base/template/forums.html
@@ -36,6 +36,8 @@
 		<div class="col-sm-3 col-sm-pull-9 col-md-3 col-md-pull-6 col-lg-2 col-lg-pull-4">
 			<div class="list-group">
 			<a class="list-group-item" href="index">{$lang_menu_top.home}</a>
+			<a class="list-group-item active" href="forums">{$lang_forums.all_forums}</a>
+			<a class="list-group-item" href="subscriptions">{$lang_forums.followed_topics}</a>
 			<a class="list-group-item" href="viewonline">{$lang_forums.users_connected}</a>
 			</div>
 		</div>
