--- a/styles/base/template/pm.html
+++ b/styles/base/template/pm.html
@@ -21,7 +21,7 @@
 				  {/loop}
 				</select>
 			  </div>
-			  <div class="form-group">
+			  <div class="form-group text-center">
 				<label for="exact"><input type="checkbox" name="exact" id="exact" value="1" {if="!empty($search.keywords) && $search.exact"}checked {/if}/> {$lang_pm.exact}</label>
 			    <button class="btn btn-default btn-sm" type="submit"><span class="glyphicon glyphicon-search"></span></button>
 			  </div>
