--- a/styles/base-dark/css/profile.css
+++ b/styles/base-dark/css/profile.css
@@ -11,9 +11,9 @@ body {
 	height: 34px;
 	padding-top: 5px;
 	border-radius: 3px;
-	border: 1px solid #858585;
+	border: 1px solid rgba(0,0,0,.6);
 	font-weight: bold;
-	background: linear-gradient(to bottom, rgba(33, 33, 33, 0.8) 0%,rgba(119, 119, 119, 0.8) 100%);
+	background: linear-gradient(to bottom, rgba(46, 51, 56, 1) 0%,rgba(53, 58, 65, 1) 100%);
 	margin-bottom: 13px;
 }
 .profile_m {
@@ -24,7 +24,8 @@ body {
 }
 .profile_panel {
 	padding: 10px;
-	border: 1px solid #858585;
+	border: 1px solid #111315;
+	background-color: #2e3338;
 	margin-bottom: 13px;
 	font-size: 13px;
 }
@@ -34,17 +35,20 @@ body {
 .profile_infos {
 	border-collapse: separate;
 	border-spacing: 1px;
-	background-color: #858585;
+	background-color: #1c1e22;
 	font-size: 13px;
 }
 .profile_infos td:nth-child(odd) {
-	background-color: #2E2E2E;
+	background-color: #2e3338;
 	font-weight: bold;
 	text-align: right;
 	width:50%;
 }
 .profile_infos td:nth-child(even) {
-	background-color: #727272;
+	background-color: #353a41;
+}
+.profile_infos tr:hover td {
+	background-color: #49515a;
 }
 .profile_infos td {
 	overflow: hidden;
